// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpaceVertical default 1`] = `
.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
}

.c0.c0 > * {
  margin-top: 1rem;
}

.c0.c0 > :first-child {
  margin-top: 0rem;
}

<div
  className="c0"
  width="100%"
>
  <div>
    🥑
  </div>
  <div>
    🐛
  </div>
  <div>
    🦜
  </div>
  <div>
    🐈
  </div>
</div>
`;

exports[`SpaceVertical reversed 1`] = `
.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
}

.c0.c0 > * {
  margin-top: 1rem;
}

.c0.c0 > :last-child {
  margin-top: 0rem;
}

<div
  className="c0"
  width="100%"
>
  <div>
    🥑
  </div>
  <div>
    🐛
  </div>
  <div>
    🦜
  </div>
  <div>
    🐈
  </div>
</div>
`;

exports[`SpaceVertical with specified gap 1`] = `
.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
}

.c0.c0 > * {
  margin-top: 2rem;
}

.c0.c0 > :first-child {
  margin-top: 0rem;
}

<div
  className="c0"
  width="100%"
>
  <div>
    🥑
  </div>
  <div>
    🐛
  </div>
  <div>
    🦜
  </div>
  <div>
    🐈
  </div>
</div>
`;
